--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="search_hint">Search coins</string>
     <string name="close_hint">Clear search</string>
     <string name="close_search">Close search bar\n</string>
+    <string name="navigate_back">Navigate back\n</string>
+    <string name="mark_fav">Mark as favorite\n</string>
 </resources>
