--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,10 @@
     <string name="try_again">Try again\n</string>
     <string name="search">Search\n\n</string>
     <string name="change_theme">Change theme\n</string>
-    <string name="search_hint">Search coins</string>
+    <string name="search_hint">Search coins...</string>
     <string name="close_hint">Clear search</string>
     <string name="close_search">Close search bar\n</string>
     <string name="navigate_back">Navigate back\n</string>
     <string name="mark_fav">Mark as favorite\n</string>
+    <string name="nothing_found">Nothing found\n</string>
 </resources>
