--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -22,4 +22,5 @@
     <string name="h24">24ч</string>
     <string name="h12">12ч</string>
     <string name="h6">6ч</string>
+    <string name="widget_description">Избранное</string>
 </resources>
